--- a/src/Resources/Schema/StoreApi/apple-pay-create-payment-session.json
+++ b/src/Resources/Schema/StoreApi/apple-pay-create-payment-session.json
@@ -8,6 +8,10 @@
   "paths": {
     "/mollie/applepay/validate/createPaymentSession": {
       "post": {
+        "tags": [
+          "Mollie",
+          "ApplePay"
+        ],
         "summary": "Validate and Create Apple Pay Payment Session",
         "operationId": "validateAndCreateApplePayPaymentSession",
         "requestBody": {
