--- a/src/Resources/Schema/StoreApi/apple-pay-get-by-id.json
+++ b/src/Resources/Schema/StoreApi/apple-pay-get-by-id.json
@@ -8,6 +8,10 @@
   "paths": {
     "/mollie/applepay/id": {
       "get": {
+        "tags": [
+          "Mollie",
+          "ApplePay"
+        ],
         "summary": "Retrieve Apple Pay ID",
         "operationId": "retrieveApplePayId",
         "responses": {
