--- a/src/Resources/Schema/StoreApi/apple-pay-pay.json
+++ b/src/Resources/Schema/StoreApi/apple-pay-pay.json
@@ -8,6 +8,10 @@
   "paths": {
     "/mollie/applepay/pay": {
       "post": {
+        "tags": [
+          "Mollie",
+          "ApplePay"
+        ],
         "summary": "Initiate Apple Pay Payment",
         "operationId": "initiateApplePayPayment",
         "requestBody": {
