--- a/src/Resources/Schema/StoreApi/apple-pay-set-shipping-method.json
+++ b/src/Resources/Schema/StoreApi/apple-pay-set-shipping-method.json
@@ -8,6 +8,10 @@
   "paths": {
     "/mollie/applepay/shipping-method": {
       "post": {
+        "tags": [
+          "Mollie",
+          "ApplePay"
+        ],
         "summary": "Select Apple Pay Shipping Method",
         "operationId": "selectApplePayShippingMethod",
         "requestBody": {
