NTR: PISHPS-391: SWAG Commercial returns are synced with mollie

--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -21,6 +21,8 @@ parameters:
           message: 'might overwrite existing variables'
     scanDirectories:
       - polyfill/Shopware
+    ignoreErrors:
+    		- '#.*Shopware\\Commercial\\ReturnManagement\\Entity\\OrderReturn.*#'
 
 services:
     - class: MolliePayments\PHPStan\Rules\NoManufacturerRule
