PISHPS-391: SWAG Commercial returns are synced with mollie (#919)
* NTR: PISHPS-391: SWAG Commercial returns are synced with mollie

* NTR: fix installation

* NTR: fix pipeline

* NTR: revert generics

---------

Co-authored-by: Vitalij Mik <vitalij.mik@dasistweb.de>

--- a/.phpstan.neon
+++ b/.phpstan.neon
@@ -1,5 +1,6 @@
 parameters:
     level: 8
+    checkGenericClassInNonGenericObjectType: false
     paths:
         - ./src
     excludePaths:
@@ -21,6 +22,8 @@ parameters:
           message: 'might overwrite existing variables'
     scanDirectories:
       - polyfill/Shopware
+    ignoreErrors:
+    		- '#.*Shopware\\Commercial\\ReturnManagement\\Entity\\OrderReturn.*#'
 
 services:
     - class: MolliePayments\PHPStan\Rules\NoManufacturerRule
