NTR: add monolog channel

--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -137,6 +137,13 @@ runs:
         docker exec shop bash -c 'php bin/console dal:validate'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
+    - name: Integration Tests
+      shell: bash
+      run: |
+        docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliPayments && make phpintegration'
+    # --------------------------------------------------------------------------------------------------------------------------------------
+
+
 
     - name: Install Cypress
       if: ${{ inputs.RUN_CYPRESS == 'true' }}
