--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -140,7 +140,7 @@ runs:
     - name: Integration Tests
       shell: bash
       run: |
-        docker exec shop bash -c 'php vendor/bin/phpunit --testsuite integration --configuration=custom/plugins/MolliePayments/phpunit.xml'
+        docker exec shop bash -c 'composer install && php vendor/bin/phpunit --testsuite integration --configuration=custom/plugins/MolliePayments/phpunit.xml'
     # --------------------------------------------------------------------------------------------------------------------------------------
 
 
