--- a/.github/workflows/nightly_pipe.yml
+++ b/.github/workflows/nightly_pipe.yml
@@ -334,6 +334,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.6.10.0'
+            php: '8.3'
           - shopware: '6.6.9.0'
             php: '8.2'
           - shopware: '6.6.6.0'
