NTR: update dev tools and switch to vitest

--- a/.github/workflows/nightly_pipe.yml
+++ b/.github/workflows/nightly_pipe.yml
@@ -8,300 +8,11 @@ on:
 
 jobs:
 
-  config:
-    name: Test Plugin Configuration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Test configuration
-        run: make configcheck -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  install:
-    name: Install Dependencies
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Install Dependencies
-        run: make dev -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  snippets:
-    name: Test Snippets
-    runs-on: ubuntu-latest
-    needs: install
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Test snippets
-        run: make snippetcheck -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  jest:
-    name: Jest Tests
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Jest
-        run: make jest -B
-
-  stryker:
-    name: Stryker Tests
-    needs: jest
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Stryker
-        run: make stryker -B
-
-  eslint:
-    name: ESLint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run ESLint
-        run: make eslint -B
-
-  stylelint:
-    name: Stylelint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Stylelint
-        run: make stylelint -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  php_checks:
-    name: PHP Syntax Checks
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: PHP Syntax Checks
-        run: make phpcheck -B
-
-  php_min:
-    name: PHP 7.2 Compatibility
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: PHP Compatibility Checks
-        run: make phpmin -B
-
-  phpunit:
-    name: PHPUnit
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHPUnit
-        run: make phpunit -B
-
-  infection:
-    name: Infection Tests
-    needs: phpunit
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Infection
-        run: make infection -B
-
-  phpstan:
-    name: PHPStan
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHPStan
-        run: make stan -B
-
-  phpcsfixer:
-    name: PHP CS Fixer
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHP CS Fixer
-        run: make csfix -B
+  review:
+    name: Review Pipeline
+    uses: ./.github/workflows/step_review.yml
+    with:
+      PHP_VERSION: 7.4
 
   # ------------------------------------------------------------------------------------------------------------------------
 
