--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -3,302 +3,18 @@ name: PR Pipeline
 on: [ pull_request, workflow_dispatch ]
 
 
+concurrency:
+  group: pr-${{ github.workflow }}-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
+
 jobs:
 
-  config:
-    name: Test Plugin Configuration
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Test configuration
-        run: make configcheck -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  install:
-    name: Install Dependencies
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Install Dependencies
-        run: make dev -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  snippets:
-    name: Test Plugin Snippets
-    runs-on: ubuntu-latest
-    needs: install
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Test snippets
-        run: make snippetcheck -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  jest:
-    name: Jest Tests
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Jest
-        run: make jest -B
-
-  stryker:
-    name: Stryker Tests
-    needs: jest
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Stryker
-        run: make stryker -B
-
-  eslint:
-    name: ESLint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run ESLint
-        run: make eslint -B
-
-  stylelint:
-    name: Stylelint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Stylelint
-        run: make stylelint -B
-
-  # ------------------------------------------------------------------------------------------------------------------------
-
-  php_checks:
-    name: PHP Syntax Checks
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: PHP Syntax Checks
-        run: make phpcheck -B
-
-  php_min:
-    name: PHP 7.2 Compatibility
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: PHP Compatibility Checks
-        run: make phpmin -B
-
-  phpunit:
-    name: PHPUnit
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHPUnit
-        run: make phpunit -B
-
-  infection:
-    name: Mutation Tests
-    needs: phpunit
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run Infection
-        run: make infection -B
-
-  phpstan:
-    name: PHPStan
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHPStan
-        run: make stan -B
-
-  phpcsfixer:
-    name: PHP CS Fixer
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev Dependency Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dev-dependencies-${{ github.run_id }}
-          path: |
-            src/Resources/app/storefront/node_modules
-            src/Resources/app/administration/node_modules
-            vendor
-
-      - name: Run PHP CS Fixer
-        run: make csfix -B
+  review:
+    name: Review Pipeline
+    uses: ./.github/workflows/step_review.yml
+    with:
+      PHP_VERSION: 7.4
 
   # ------------------------------------------------------------------------------------------------------------------------
 
@@ -322,8 +38,6 @@ jobs:
 
       - name: Build Plugin
         uses: ./.github/actions/build-plugin
-
-  # ------------------------------------------------------------------------------------------------------------------------
 
   e2e:
     name: E2E Core | Shopware ${{ matrix.shopware }}
@@ -357,13 +71,13 @@ jobs:
       - name: E2E Core Tests, Shopware ${{ matrix.shopware }}
         uses: ./.github/actions/run-e2e
         with:
-          # -------------------------------------------
-          SHOPWARE: ${{ matrix.shopware }}
-          PHP: ${{ matrix.php }}
-          # -------------------------------------------
-          MOLLIE_APIKEY_TEST: ""
-          # -------------------------------------------
-          RUN_CYPRESS: true
-          TESTRAIL: false
-          # only run @core tests, because we have no API key here
-          FILTERS: "@core"
+            # -------------------------------------------
+            SHOPWARE: ${{ matrix.shopware }}
+            PHP: ${{ matrix.php }}
+            # -------------------------------------------
+            MOLLIE_APIKEY_TEST: ""
+            # -------------------------------------------
+            RUN_CYPRESS: true
+            TESTRAIL: false
+            # only run @core tests, because we have no API key here
+            FILTERS: "@core"
