--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -57,6 +57,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.6.10.1'
+            php: '8.3'
           - shopware: '6.6.9.0'
             php: '8.2'
           - shopware: '6.5.8.12'
