--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "postcss-scss": "^4.0.9",
+    "prettier": "^3.5.3",
     "stylelint": "^14.1.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-scss": "^4.0.1",
