NTR: add prettier and ignore shopware global
Signed-off-by: Marco Faul <mf@dasistweb.de>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,12 @@
     "node": true,
     "es6": true
   },
+  "globals": {
+    "Shopware": "readonly"
+  },
   "extends": [
-    "eslint:recommended"
+    "eslint:recommended",
+    "prettier"
   ],
   "ignorePatterns": [
     "src/Resources/app/storefront/dist"
