--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.7.0",
     "deepmerge": "^4.3.1",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
