--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "author": "Mollie B.V.",
     "devDependencies": {
+        "deepmerge": "^4.2.2",
         "webpack-cli": "^6.0.1"
     }
 }
