--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -30,7 +30,7 @@ runs:
       run: |
         docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make prod'
         docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:refresh'
-        docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:install MolliePayments --activate'
+        docker exec shop bash -c 'cd /var/www/html && php bin/console plugin:install --reinstall MolliePayments --activate'
         docker exec shop bash -c 'cd /var/www/html && php bin/console cache:clear'
 
     - name: Build Plugin
