NTR: add e2e tests to pipeline

--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -44,11 +44,13 @@ runs:
       shell: bash
       run: |
         docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
+        docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments-e2e.zip ~/.build/MolliePayments-e2e.zip
 
     - name: Extract ZIP file for artifact
       shell: bash
       run: |
         unzip ~/.build/MolliePayments.zip -d ~/.build/MolliePayments
+        unzip ~/.build/MolliePayments-e2e.zip -d ~/.build/MolliePayments-e2e
 
     - name: Store ZIP file in Github
       uses: actions/upload-artifact@v4
@@ -57,7 +59,15 @@ runs:
         retention-days: 4
         path: ~/.build/MolliePayments
 
+    - name: Store e2e ZIP file in Github
+      uses: actions/upload-artifact@v4
+      with:
+        name: MolliePayments-Shopware-e2e
+        retention-days: 4
+        path: ~/.build/MolliePayments-e2e
+
     - name: Delete TMP files
       shell: bash
       run: |
         rm -rf ~/.build/MolliePayments
+        rm -rf ~/.build/MolliePayments-e2e
