--- a/.github/workflows/step_review.yml
+++ b/.github/workflows/step_review.yml
@@ -146,6 +146,27 @@ jobs:
       - name: Run Stylelint
         run: make stylelint -B
 
+  prettier:
+    name: Prettier
+    needs: install_dev
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone Code
+        uses: actions/checkout@v3
+
+      - name: Mount Dev Dependency Cache
+        uses: actions/cache@v3
+        with:
+          key: cache-dev-dependencies-${{ github.run_id }}
+          path: |
+            node_modules
+            vendor
+            src/Resources/app/storefront/node_modules
+            src/Resources/app/administration/node_modules
+
+      - name: Run Prettier
+        run: make prettier -B
+
 # ------------------------------------------------------------------------------------------------------------------------
 # ------------------------------------------------------------------------------------------------------------------------
 
