--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -117,6 +117,8 @@ runs:
       shell: bash
       run: |
         docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
+        docker exec shop bash -c 'rm composer.lock'
+        docker exec shop bash -c 'composer update'
         docker exec shop bash -c 'composer config --no-plugins allow-plugins.wikimedia/composer-merge-plugin true'
         docker exec shop bash -c 'composer config --no-plugins allow-plugins.php-http/discovery true'
         docker exec shop bash -c 'composer config --json extra.merge-plugin "{\"include\":[\"custom/plugins/MolliePayments/composer.json\"], \"ignore-duplicates\":true}"'
