--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -112,15 +112,16 @@ runs:
       shell: bash
       run: |
         docker exec shop bash -c 'php bin/console system:config:set core.loginRegistration.showAccountTypeSelection true'
-#
- #   - name: Prepare Shop for e2e tests
- #     shell: bash
- #     run: |
- #       docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
-  #      docker exec shop bash -c 'composer config --no-plugins allow-plugins.wikimedia/composer-merge-plugin true'
-  #      docker exec shop bash -c 'composer config --no-plugins allow-plugins.php-http/discovery true'
-   #     docker exec shop bash -c 'composer config --json extra.merge-plugin "{\"include\":[\"custom/plugins/MolliePayments/composer.json\"], \"ignore-duplicates\":true}"'
-    #    docker exec shop bash -c 'composer require wikimedia/composer-merge-plugin:*'
+
+    - name: Prepare Shop for e2e tests
+      shell: bash
+      run: |
+        docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
+        docker exec shop bash -c 'composer config --no-plugins allow-plugins.wikimedia/composer-merge-plugin true'
+        docker exec shop bash -c 'composer config --no-plugins allow-plugins.php-http/discovery true'
+        docker exec shop bash -c 'composer config --json extra.merge-plugin "{\"include\":[\"custom/plugins/MolliePayments/composer.json\"], \"ignore-duplicates\":true}"'
+        docker exec shop bash -c 'composer update'
+        docker exec shop bash -c 'composer require wikimedia/composer-merge-plugin:*'
 
     - name: Install Plugin
       shell: bash
