--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -112,17 +112,22 @@ runs:
       shell: bash
       run: |
         docker exec shop bash -c 'php bin/console system:config:set core.loginRegistration.showAccountTypeSelection true'
+    - name: Legacy fixes
+      if: startsWith('${{ inputs.SHOPWARE }}','6.4')
+      run: |
+        docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
+        docker exec shop bash -c 'rm -rf /var/www/html/vendor/*'
+        docker exec shop bash -c 'rm -rf /var/www/html/composer.lock'
+        docker exec shop bash -c 'composer require enqueue/enqueue:0.10.23 --no-scripts'
+        docker exec shop bash -c 'composer install --no-scripts'
+       
 
     - name: Prepare Shop for e2e tests
       shell: bash
       run: |
-        docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
         docker exec shop bash -c 'composer config --no-plugins allow-plugins.wikimedia/composer-merge-plugin true'
         docker exec shop bash -c 'composer config --no-plugins allow-plugins.php-http/discovery true'
         docker exec shop bash -c 'composer config --json extra.merge-plugin "{\"include\":[\"custom/plugins/MolliePayments/composer.json\"], \"ignore-duplicates\":true}"'
-        docker exec shop bash -c 'rm -rf /var/www/html/vendor/*'
-        docker exec shop bash -c 'rm -rf /var/www/html/composer.lock'
-        docker exec shop bash -c 'composer install --no-scripts'
         docker exec shop bash -c 'composer require wikimedia/composer-merge-plugin:*'
 
     - name: Install Plugin
