--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -112,14 +112,18 @@ runs:
       shell: bash
       run: |
         docker exec shop bash -c 'php bin/console system:config:set core.loginRegistration.showAccountTypeSelection true'
+
     - name: Legacy fixes
-      if: startsWith('${{ inputs.SHOPWARE }}','6.4')
+      if: ${{ startsWith(inputs.SHOPWARE,'6.4') }}
+      shell: bash
       run: |
-        docker exec -u root shop bash -c 'wget https://getcomposer.org/download/latest-stable/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
+        docker exec -u root shop bash -c 'wget https://getcomposer.org/download/2.2.9/composer.phar && chmod a+x composer.phar && mv composer.phar /usr/local/bin/composer'
         docker exec shop bash -c 'rm -rf /var/www/html/vendor/*'
         docker exec shop bash -c 'rm -rf /var/www/html/composer.lock'
+        # enqueue 0.10.24 is incompatible with 7.4
         docker exec shop bash -c 'composer require enqueue/enqueue:0.10.23 --no-scripts'
-        docker exec shop bash -c 'composer install --no-scripts'
+        docker exec shop bash -c 'composer require --dev composer/xdebug-handler:^2 --no-scripts'
+        docker exec shop bash -c 'composer update --no-scripts'
        
 
     - name: Prepare Shop for e2e tests
