--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         "phpunit/phpunit": "^9",
         "phpstan/phpstan": "^2",
         "friendsofphp/php-cs-fixer": "3.3.2",
+        "composer/xdebug-handler": "^2",
         "phpcompatibility/php-compatibility": "^9.3",
         "squizlabs/php_codesniffer": "^3",
         "boxblinkracer/phpunuhi": "dev-main",
