--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -57,6 +57,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.7.0.0-rc1'
+            php: '8.3'
           - shopware: '6.6.10.2'
             php: '8.3'
           - shopware: '6.6.9.0'
