--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -24,7 +24,11 @@ runs:
         docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
-
+    - name: Fix apt-get repo
+      shell: bash
+      run: |
+        docker exec -u root shop bash -c 'apt-get update --allow-releaseinfo-change'
+        
     - name: Install Plugin
       shell: bash
       run: |
