--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ src/Resources/app/storefront/node_modules
 
 src/Resources/public/administration/css/
 src/Resources/public/administration/js/
+src/Resources/public/administration/assets/
 /tests/Cypress/Cypress.env.json
 /tests/Cypress/cypress/results
 /src/Resources/app/administration/.stryker-tmp
