--- a/config/.phpstan.neon
+++ b/config/.phpstan.neon
@@ -34,6 +34,7 @@ parameters:
     		- identifier: property.unresolvableType
     		- identifier: parameter.unresolvableType
     		- identifier: varTag.unresolvableType
+    		- identifier: attribute.notFound
 
 services:
     - class: MolliePayments\PHPStan\Rules\NoManufacturerRule
